--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,9 @@
     "client/lib"
   ],
   "dependencies": {
-    "angular": "~1.4.8",
-    "angular-mocks": "~1.2.18",
-    "angular-ui-router": "latest",
+    "angular": "~1.5.0",
+    "angular-mocks": "^1.5.0",
+    "angular-ui-router": "^0.2.18",
     "angular-bootstrap": "^1.2.1"
   }, 
   "resolutions": {
