--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,9 @@
     "angular": "~1.5.0",
     "angular-mocks": "^1.5.0",
     "angular-ui-router": "^0.2.18",
-    "angular-bootstrap": "^1.2.1"
-  }, 
+    "angular-bootstrap": "^1.2.1",
+    "bootstrap": "^3.3.6"
+  },
   "resolutions": {
     "angular": "1.3.0"
   }
