--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "node_modules"
   ],
   "dependencies": {
+    "bluebird": "^2.3.0",
     "body-parser": "latest",
     "bower": "^1.7.7",
     "dotenv": "^2.0.0",
     "express": "latest",
-    "mongoose": "latest",
+    "mongoose": "^4.4.6",
     "morgan": "latest",
     "request": "^2.69.0"
   },
